--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <script id="month-title" type="text/x-handlebars-template">
       <h1>{{ month }} [{{ days }}]</h1>
     </script>
+    <script id="list" type="text/x-handlebars-template">
+      <li>{{ li }}</li>
+    </script>
   </head>
   <body>
     <div class="container">
@@ -41,8 +44,11 @@
       <!-- Fine lista mesi -->
       <div class="single-list">
         <h2>ANNO 2018</h2>
-        <div class="holiday-list">
+        <div class="holiday-title">
 
+        </div>
+        <div class="holiday-list">
+          <ul></ul>
         </div>
       </div>
     </div>
