--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>{{ month }} [{{ days }}]</h1>
     </script>
     <script id="list" type="text/x-handlebars-template">
-      <li>{{ li }}</li>
+      <li data-check="{{ data_machine }}">{{ li }}</li>
     </script>
   </head>
   <body>
